--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 pest = "2.1.3"
 pest_derive = "2.1.0"
 lazy_static = "1.4.0"
+inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm8-0"] }
